[package]
name = "aerospike-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.16" }
aerospike-rt = { path = "../aerospike-rt" }
tokio-rustls = { version = "0.23.4", optional = true }
webpki = { version = "0.22.0", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }

[features]
default = ["tokio-rustls"]
tokio-rustls = ["dep:tokio-rustls", "dep:webpki", "aerospike-rt/rt-tokio"]
tokio-native-tls = ["dep:tokio-native-tls", "aerospike-rt/rt-tokio"]
